--- a/styles.css
+++ b/styles.css
@@ -9,34 +9,12 @@ body {
     color: #404040;
     min-height: 100%;
     background: linear-gradient(to bottom, #f2f2f2, #b3b3b3) fixed;
-    padding: 10px;
+    /*padding: 10px;*/
     margin: 0;
     text-align: center;
     position: relative;
 }
 
-.profile_img {
-    width: 100%;
-}
-
-.about {
-    position: relative;
-    margin-bottom: 3%;
-    font-size: 100%;
-}
-
-.hey {
-    font-size: 400%;
-}
-
-.name {
-    font-size: 200%;
-}
-
-.description {
-    margin-top: 3%;
-    font-size: 150%;
-}
 .frame {
     width: 15%;
     background: #eee;
@@ -48,22 +26,43 @@ body {
     /*border-width: 8px;*/
     overflow: hidden;
     padding: 3%;
+    min-width: 200px;
+}
+
+.profile_img {
+    width: 100%;
+}
+
+.about {
+    position: relative;
+    margin-bottom: 4%;
+    font-size: 100%;
+}
+
+.hey {
+    font-size: 400%;
+}
+
+.name {
+    font-size: 200%;
+}
+.description {
+    margin-top: 3%;
+    font-size: 150%;
 }
 
 
 .social {
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    position: relative;
 }
 
 .social_icon {
     width: 3%;
+    min-width: max-content;
 }
 
 object {
     width: 2%;
+    min-width: 30px;
 }
 
 a {
