--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,29 @@ body {
     font-size: 100%;
     color: #404040;
     min-height: 100%;
-    background: linear-gradient(to bottom, #f2f2f2, #b3b3b3) fixed;
+    /*background: linear-gradient(to bottom, #f2f2f2, #b3b3b3) fixed;*/
     /*padding: 10px;*/
     margin: 0;
     text-align: center;
     position: relative;
 }
 
+a {
+    padding: 2%;
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+}
+
 .frame {
     width: 15%;
     background: #eee;
     margin: auto;
-    border-color: #666 ;
+    border-color: #666;
     border-image: none;
     border-radius: 100%;
     border-style: solid;
@@ -28,6 +39,7 @@ body {
     padding: 3%;
     min-width: 200px;
 }
+
 
 .profile_img {
     width: 100%;
@@ -46,11 +58,11 @@ body {
 .name {
     font-size: 200%;
 }
+
 .description {
     margin-top: 3%;
     font-size: 150%;
 }
-
 
 .social {
 }
@@ -60,9 +72,5 @@ body {
     height: auto;
     border: 0;
     min-width: 30px;
-}
-
-a {
-    padding: 2%;
 }
 
