--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,6 @@ body {
     position: relative;
 }
 
-a {
-    padding: 2%;
-}
-
 #particles-js {
     width: 100%;
     height: 100%;
@@ -39,7 +35,6 @@ a {
     padding: 3%;
     min-width: 200px;
 }
-
 
 .profile_img {
     width: 100%;
@@ -65,6 +60,10 @@ a {
 }
 
 .social {
+    display: flex;
+    width: 25%;
+    min-width: 300px;
+    margin: 0 auto;
 }
 
 .social_icon {
@@ -72,5 +71,6 @@ a {
     height: auto;
     border: 0;
     min-width: 30px;
+    margin: 0;
 }
 
