assign min-width to about div

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body {
     position: relative;
     margin-bottom: 4%;
     font-size: 100%;
+    width: 100%;
+    min-width: 500px;
 }
 
 .hey {
