--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,9 @@ html {
 }
 
 body {
-    font-family: Optima, sans-serif;
+    color: #363636; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 100%;
-    color: #404040;
-    min-height: 100%;
-    /*background: linear-gradient(to bottom, #f2f2f2, #b3b3b3) fixed;*/
-    /*padding: 10px;*/
     margin: 0;
     text-align: center;
     position: relative;
@@ -22,56 +19,36 @@ body {
     z-index: -10;
 }
 
-.frame {
-    width: 15%;
-    background: #eee;
-    margin: auto;
-    border-color: #666;
-    border-image: none;
-    border-radius: 100%;
-    border-style: solid;
-    /*border-width: 8px;*/
-    overflow: hidden;
-    padding: 3%;
-    min-width: 200px;
-}
-
-.profile_img {
-    width: 100%;
-}
-
 .about {
-    position: relative;
-    margin: auto;
+    text-align: center; 
+    margin-top: 300px;
+    margin-bottom: 0px;
     font-size: 100%;
-    width: 800px;
-    min-width: 800px;
 }
-
-.hey {
-    font-size: 400%;
-}
-
+    
 .name {
-    font-size: 200%;
+    font-size: 40px;
+    margin-bottom: 20px;
 }
 
 .description {
-    margin-top: 3%;
-    font-size: 150%;
-}
+    margin-top: 0%;
+    font-size: 20px;
+    /* margin-bottom: 10px; */
+} 
 
 .social {
+    text-align: center; 
     display: flex;
-    width: 25%;
-    min-width: 300px;
+    width: 5%;
+    min-width: 50px;
     margin: 0 auto;
 }
 
 .social_icon {
-    width: 2%;
+    width: 60%;
     height: auto;
     border: 0;
-    min-width: 30px;
+    min-width: 20px;
     margin: 0;
 }
