--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 
 body {
     color: #363636; 
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 100%;
     margin: 0;
     text-align: center;
@@ -21,20 +21,18 @@ body {
 
 .about {
     text-align: center; 
-    margin-top: 300px;
+    margin-top: 320px;
     margin-bottom: 0px;
     font-size: 100%;
 }
     
 .name {
     font-size: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .description {
-    margin-top: 0%;
-    font-size: 20px;
-    /* margin-bottom: 10px; */
+    font-size: 18px;
 } 
 
 .social {
@@ -46,7 +44,7 @@ body {
 }
 
 .social_icon {
-    width: 60%;
+    width: 50%;
     height: auto;
     border: 0;
     min-width: 20px;
