--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,86 @@
-html {
-    margin: 0;
-    padding: 0;
+html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: normal;
+  color: #303030; 
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
 }
 
-body {
-    color: #363636; 
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 100%;
-    margin: 0;
-    text-align: center;
-    position: relative;
+h1, h2 {
+  font-size: 22px;
+  font-weight: bold;
 }
 
-#particles-js {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -10;
+h2 {
+  margin-bottom: 1em;
+  color: #aa0101;
 }
 
-.about {
-    text-align: center; 
-    margin-top: 320px;
-    margin-bottom: 0px;
-    font-size: 100%;
-}
-    
-.name {
-    font-size: 40px;
-    margin-bottom: 40px;
+h3 {
+  font-weight: bold;
 }
 
-.description {
-    font-size: 18px;
-} 
-
-.social {
-    text-align: center; 
-    display: flex;
-    width: 90px;
-    min-width: 50px;
-    margin: 0 auto;
-}
-
-.social_icon {
-    width: 50%;
-    height: auto;
-    border: 0;
-    min-width: 20px;
-    margin: 0;
-}
-
-.back {
-    text-align: left;
-    margin-left: 40px;
-    margin-top: 10px;
-}
-
-iframe {
-    height: 92vh;
+p {
+  margin-bottom: 0.5em;
 }
 
 a {
-    color: #aa0101;
+  color: #aa0101;
+}
+
+.container {
+  max-width: 100%;
+  margin: 25px 250px;
+  padding: 50px 150px;
+  background-color: rgb(255, 255, 255, 0.9);
+}
+
+.sub-section-title-top, 
+.sub-section-title-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sub-section-title-middle {
+  margin: 0;
+}
+
+.sub-section-title-bottom {
+  font-style: italic;
+  margin-bottom: 1em;
+}
+
+.content {
+  margin-bottom: 1em;
+}
+
+.divider {
+  border-bottom: 1px solid #303030;
+  opacity: 0.2;
+  width: 66%;
+  margin: 2em auto; /* Adds margin at the bottom and centers the div horizontally */
+}
+
+#particles-js {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -10;
+}
+
+/* Responsive styles for smaller screens */
+@media (max-width: 1060px) {
+  .container {
+    padding: 40px 60px;
+  }
+
+  html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
+    font-size: 14px;
+  }
+
+  h1, h2 {
+    font-size: 20px;
+  }
 }
