--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
+html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, a {
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -26,14 +26,11 @@ p {
   margin-bottom: 0.5em;
 }
 
-a {
-  color: #aa0101;
-}
-
 .container {
   max-width: 100%;
-  margin: 25px 250px;
-  padding: 50px 150px;
+  /* 1680  */
+  margin: 25px 15%;
+  padding: 50px 10%;
   background-color: rgb(255, 255, 255, 0.9);
 }
 
@@ -70,10 +67,19 @@ a {
   z-index: -10;
 }
 
-/* Responsive styles for smaller screens */
-@media (max-width: 1060px) {
+/* Responsive styles for medium size screens */
+@media (max-width: 1000px) {
   .container {
-    padding: 40px 60px;
+    margin: 25px 10%;
+    padding: 25px 5%;
+  }
+}
+
+/* Responsive styles for small size screens */
+@media (max-width: 800px) {
+  .container {
+    margin: 25px 5%;
+    padding: 25px 2%;
   }
 
   html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
