--- a/styles.css
+++ b/styles.css
@@ -67,17 +67,33 @@ main {
 }
 
 /* Responsive styles for small size screens */
-@media (max-width: 800px) {
-  .container {
+@media (max-width: 1000px) {
+  main {
     margin: 25px 5%;
     padding: 25px 2%;
   }
 
-  html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
+  html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, a {
     font-size: 14px;
   }
 
   h1, h2 {
     font-size: 20px;
+  }
+}
+
+/* Responsive styles for small size screens */
+@media (max-width: 400px) {
+  main {
+    margin: 25px 2%;
+    padding: 25px 1%;
+  }
+
+  html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, a {
+    font-size: 12px;
+  }
+
+  h1, h2 {
+    font-size: 16px;
   }
 }
